# Accounting

./: .gitignore  1.xlsx  1111.py  Makefile  Procfile  ingredients.xlsx  products.xlsx  pyproject.toml  requirements.txt
accounting/: settings.py  urls.py
goods/: admin.py  api.py  filters.py  forms.py  models.py  serializer.py  urls.py  views.py
goods/migrations/: 0001_initial.py  0002_sale.py  0003_sale_quantity.py  0004_auto_20200712_1744.py  0005_auto_20200713_1558.py  0006_auto_20200713_1620.py  0007_auto_20200713_1648.py  0008_auto_20200721_1828.py  0009_auto_20200724_0950.py  0010_auto_20200725_1432.py  0011_auto_20200727_1016.py  0012_auto_20200728_0623.py  0013_auto_20200731_1136.py  0014_auto_20200731_1311.py  0015_auto_20200801_1614.py  0016_auto_20200801_1727.py  0017_auto_20200802_0628.py  0018_auto_20200802_1119.py  0019_auto_20200803_1311.py  0020_auto_20200805_1353.py  0021_auto_20200806_0550.py  0022_auto_20200806_0606.py  0023_auto_20200812_0514.py  0024_auto_20200815_0421.py  0025_sale_period.py  0026_auto_20200911_0803.py  0027_invoice_task_task.py  0028_delete_invoice_task.py  0029_task_invoice.py  0030_auto_20201007_1524.py  0031_auto_20210124_1602.py  0032_auto_20210901_0655.py
goods/templates/: add_incomings.html  add_internet_sales2.html  add_inventories.html  add_products.html  (+27 more)
money/: admin.py  filters.py  forms.py  middlewares.py  models.py  urls.py  views.py
production/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
reports/: urls.py  views.py
tasks/: models.py
utilities/: download.py  get_asset.py  get_period.py
(+103 files in other folders)
