[tool.poetry]
name = "accounting"
version = "0.1.0"
description = ""
authors = ["Goshurenko Pavel"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
openpyxl = "^3.0.3"
django-filter = "^2.3.0"
django-bootstrap4 = "^2.2.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
